# rob599_project

./: LICENSE  README.md
arduino/: package.xml  setup.py
arduino/arduino/: arduino_control.py  arduino_test.py
dynamixel_control/dynamixel_control/: CMakeLists.txt  package.xml
dynamixel_control/dynamixel_control/include/: dual_motor_client.hpp  dual_motor_interface.hpp  motor_interface.hpp  motor_interface_client.hpp  scratch_service_client.hpp
dynamixel_control/dynamixel_control/src/: dual_motor_client.cpp  dual_motor_interface.cpp  motor_interface.cpp  motor_interface_client.cpp  scratch_service_client.cpp
dynamixel_control/dynamixel_control_msgs/: CMakeLists.txt  package.xml
dynamixel_control/dynamixel_control_msgs/srv/: DualSetOperatingMode.srv  SetOperatingMode.srv
example_arduino_controls/linear_target_position_ros_edits/: linear_target_position_ros_edits.ino
example_linear_actuator_control/: linear_actuator_interface.ino
gripper/: package.xml  setup.py
gripper/gripper/: record.py  record_client.py
gripper/launch/: gripper_launch.py
gripper_msgs/: CMakeLists.txt  package.xml
gripper_msgs/action/: Record.action  RecordData.action
ros2_contactile_sensors/: README.md
ros2_contactile_sensors/papillarray_ros2_v2/: package.xml
ros2_contactile_sensors/papillarray_ros2_v2/lib/: PTSDKConstants.h  PTSDKListener.h  PTSDKParser.h  PTSDKPillar.h
ros2_contactile_sensors/papillarray_ros2_v2/src/: papillarray_ros2_node.cpp
ros2_contactile_sensors/ros2_contactile_sensors/papillarray_ros2_v2/: CMakeLists.txt
ros2_contactile_sensors/ros2_contactile_sensors/papillarray_ros2_v2/launch/: papillarray.launch.py
ros2_contactile_sensors/ros2_contactile_sensors/papillarray_ros2_v2/lib/: PTSDKSensor.h
ros2_contactile_sensors/ros2_contactile_sensors/papillarray_ros2_v2/src/: papillarray_ros2_node.cpp  papillarray_ros2_node.hpp
ros2_contactile_sensors/ros2_contactile_sensors/sensor_interfaces/: CMakeLists.txt
ros2_contactile_sensors/ros2_contactile_sensors/sensor_interfaces/msg/: PillarState.msg  SensorState.msg
ros2_contactile_sensors/sensor_interfaces/: package.xml
sensor_test2_interfaces/: CMakeLists.txt  package.xml
sensor_test2_interfaces/action/: Record.action
trial_control/gripper/: setup.py
trial_control/gripper/gripper/: actuator_linear.py  arduino_control.py  data_collection.py  linear_actuator.py  record.py  record_client.py
trial_control/gripper/launch/: gripper_launch.py
trial_control/gripper_msgs/: CMakeLists.txt  package.xml
trial_control/gripper_msgs/srv/: LinearActuator.srv
